holos/deploy/clusters/k3d-holos/components/echo/namespace-echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    kubernetes.io/metadata.name: echo
  name: echo
