holos/deploy/clusters/k3d-holos/components/echo/httproute-echo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: echo
  name: echo
  namespace: echo
spec:
  hostnames:
  - echo.holos.internal
  parentRefs:
  - name: default
    namespace: istio-gateways
  rules:
  - backendRefs:
    - name: echo
      port: 8080
    matches:
    - path:
        type: Exact
        value: /
    - path:
        type: Exact
        value: /hostname
